match bg color to logo

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-  background: #f0f0ed;
+  /* background: #f0f0ed; */
+  background: #e2e2de;
   font-family: sans-serif;
   color: #333;
   margin: 0;
